--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal-Solution</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- font-awesome cdn -->
+    <script src="https://kit.fontawesome.com/a2cf7ce55d.js" crossorigin="anonymous"></script>
+    <!-- google font cdn -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <!-- tailwind + daisyUI cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style type="text/tailwindcss">
+        @theme {
+        --color-clifford: #da373d;
+        --font-eb-garamond: 'EB Garamond', serif;
+        --font-poppins: 'Poppins', sans-serif;
+        --golden-color: #B68C5A;
+      }
+    </style>
 </head>
-<body>
-    
+
+<body class="font-poppins">
+    <header class="container mx-auto">
+        <!-- navbar section -->
+        <nav>
+            <div class="navbar bg-base-100 shadow-sm">
+                <div class="navbar-start">
+                    <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M4 6h16M4 12h8m-8 6h16" />
+                            </svg>
+                        </div>
+                        <ul tabindex="0"
+                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow text-gray-500">
+                            <li><a>Home</a></li>
+                            <li><a>Services <i class="fa-solid fa-greater-than"></i></a></li>
+                            <li><a>Cases <i class="fa-solid fa-greater-than"></i></a></li>
+                            <li><a>Blog <i class="fa-solid fa-greater-than"></i></a></li>
+                            <li><a>Contact Us <i class="fa-solid fa-greater-than"></i></a></li>
+                        </ul>
+                    </div>
+                    <img src="./images/logo2.png" alt="">
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                    <ul class="menu menu-horizontal px-1 text-gray-500">
+                        <li><a>Home</a></li>
+                        <li><a>Services <i class="fa-solid fa-greater-than"></i></a></li>
+                        <li><a>Cases <i class="fa-solid fa-greater-than"></i></a></li>
+                        <li><a>Blog <i class="fa-solid fa-greater-than"></i></a></li>
+                        <li><a>Contact Us <i class="fa-solid fa-greater-than"></i></a></li>
+                    </ul>
+                </div>
+                <div class="navbar-end">
+                    <a class="btn text-white text-xl gold px-7 py-5 rounded-md">Free Consultation</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
 </body>
+
 </html>
