addad the banner section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner section -->
+        <sectioncl class="my-20">
+            <div class="hero py-28 bg-linear-to-t/srgb from-[#111111] to-white"
+                style="background-image: url(./images/banner.png);">
+                <div class="hero-overlay"></div>
+                <div class="hero-content text-neutral-content text-center">
+                    <div class="">
+                        <h1 class="mb-5 text-5xl font-bold font-eb-garamond">We Provide Effective <br> Legal Solutions</h1>
+                        <p class="mb-5 text-base">
+                            There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.
+                        </p>
+                        <div>
+                            <input class=" text-base text-gray-500 bg-white border-none rounded-md p-4" placeholder="Search your services" type="text">
+                            <button class="btn p-7 gold border-none ml-4">Search</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </section>
     </header>
 
     <main></main>
