--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body class="font-poppins">
     <header class="container mx-auto">
         <!-- navbar section -->
-        <nav>
-            <div class="navbar bg-base-100 shadow-sm">
+        <nav class="mb-12">
+            <div class="navbar bg-base-100 ">
                 <div class="navbar-start">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -68,8 +68,8 @@
         </nav>
 
         <!-- banner section -->
-        <sectioncl class="my-20">
-            <div class="hero py-28 bg-linear-to-t/srgb from-[#111111] to-white"
+        <sectioncl class="my-28">
+            <div class="hero py-28 bg-linear-to-t/srgb from-[#111111] to-white bg-cover"
                 style="background-image: url(./images/banner.png);">
                 <div class="hero-overlay"></div>
                 <div class="hero-content text-neutral-content text-center">
@@ -88,7 +88,59 @@
             </section>
     </header>
 
-    <main></main>
+    <main class="container mx-auto">
+        <!-- practice section -->
+         <section class="my-24">
+            <h2 class="font-eb-garamond text-4xl text-center">The Legal Practice Area</h2>
+            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+
+            <!-- cards -->
+             <div class="grid md:grid-cols-2 lg:grid-cols-3">
+                <!-- card-1 -->
+                 <div class="p-16 text-center space-y-7 border-b-1 border-r-1 border-b-gray-300 border-r-gray-300">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+                <!-- card-2 -->
+                 <div class="p-16 text-center space-y-7 bg-gradient-to-t from-white to-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+                <!-- card-3 -->
+                 <div class="p-16 text-center space-y-7 border-b-1 border-b-gray-300">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+                <!-- card-4 -->
+                 <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+                <!-- card-5 -->
+                 <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+                <!-- card-6 -->
+                 <div class="p-16 text-center space-y-7">
+                    <img class="mx-auto" src="./images/business.png" alt="">
+                    <h2 class="text-4xl font-extrabold">Business Law</h2>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <button><img src="./images/Frame.png" alt=""></button>
+                 </div>
+             </div>
+         </section>
+    </main>
 
     <footer></footer>
 </body>
