addad the our client section

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <ul tabindex="0"
                             class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow text-gray-500">
                             <li><a>Home</a></li>
-                            <li><a>Services <i class="fa-solid fa-greater-than"></i></a></li>
-                            <li><a>Cases <i class="fa-solid fa-greater-than"></i></a></li>
-                            <li><a>Blog <i class="fa-solid fa-greater-than"></i></a></li>
-                            <li><a>Contact Us <i class="fa-solid fa-greater-than"></i></a></li>
+                            <li><a>Services ❯</a></li>
+                            <li><a>Cases ❯</a></li>
+                            <li><a>Blog ❯</a></li>
+                            <li><a>Contact Us ❯</a></li>
                         </ul>
                     </div>
                     <img src="./images/logo2.png" alt="">
@@ -55,10 +55,10 @@
                 <div class="navbar-center hidden lg:flex">
                     <ul class="menu menu-horizontal px-1 text-gray-500">
                         <li><a>Home</a></li>
-                        <li><a>Services <i class="fa-solid fa-greater-than"></i></a></li>
-                        <li><a>Cases <i class="fa-solid fa-greater-than"></i></a></li>
-                        <li><a>Blog <i class="fa-solid fa-greater-than"></i></a></li>
-                        <li><a>Contact Us <i class="fa-solid fa-greater-than"></i></a></li>
+                        <li><a>Services ❯</a></li>
+                        <li><a>Cases ❯</a></li>
+                        <li><a>Blog ❯</a></li>
+                        <li><a>Contact Us ❯</a></li>
                     </ul>
                 </div>
                 <div class="navbar-end">
@@ -74,13 +74,16 @@
                 <div class="hero-overlay"></div>
                 <div class="hero-content text-neutral-content text-center">
                     <div class="">
-                        <h1 class="mb-5 text-5xl font-bold font-eb-garamond">We Provide Effective <br> Legal Solutions</h1>
+                        <h1 class="mb-5 text-5xl font-bold font-eb-garamond">We Provide Effective <br> Legal Solutions
+                        </h1>
                         <p class="mb-5 text-base">
-                            There are many variations of passages of Lorem Ipsum available, but the majority <br> have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority <br> have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div>
-                            <input class=" text-base text-gray-500 bg-white border-none rounded-md p-4" placeholder="Search your services" type="text">
-                            <button class="btn p-7 gold border-none ml-4">Search</button>
+                            <input class=" text-base text-gray-500 bg-white border-none rounded-md p-4"
+                                placeholder="Search your services" type="text">
+                            <button class="btn p-7 gold border-none ml-4 mt-5 md:mt-0">Search</button>
                         </div>
                     </div>
                 </div>
@@ -90,56 +93,93 @@
 
     <main class="container mx-auto">
         <!-- practice section -->
-         <section class="my-24">
+        <section class="my-24">
             <h2 class="font-eb-garamond text-4xl text-center">The Legal Practice Area</h2>
-            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum
+                available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
 
             <!-- cards -->
-             <div class="grid md:grid-cols-2 lg:grid-cols-3">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3">
                 <!-- card-1 -->
-                 <div class="p-16 text-center space-y-7 border-b-1 border-r-1 border-b-gray-300 border-r-gray-300">
+                <div class="p-16 text-center space-y-7 border-b-1 border-r-1 border-b-gray-300 border-r-gray-300">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
+                </div>
                 <!-- card-2 -->
-                 <div class="p-16 text-center space-y-7 bg-gradient-to-t from-white to-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
+                <div
+                    class="p-16 text-center space-y-7 bg-gradient-to-t from-white to-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
+                </div>
                 <!-- card-3 -->
-                 <div class="p-16 text-center space-y-7 border-b-1 border-b-gray-300">
+                <div class="p-16 text-center space-y-7 border-b-1 border-b-gray-300">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
+                </div>
                 <!-- card-4 -->
-                 <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
+                <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
+                </div>
                 <!-- card-5 -->
-                 <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
+                <div class="p-16 text-center space-y-7 border-r-1 border-r-gray-300">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
+                </div>
                 <!-- card-6 -->
-                 <div class="p-16 text-center space-y-7">
+                <div class="p-16 text-center space-y-7">
                     <img class="mx-auto" src="./images/business.png" alt="">
                     <h2 class="text-4xl font-extrabold">Business Law</h2>
-                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour.</p>
                     <button><img src="./images/Frame.png" alt=""></button>
-                 </div>
-             </div>
-         </section>
+                </div>
+            </div>
+        </section>
+
+        <!-- our client section -->
+        <section class="my-24">
+            <h2 class="font-eb-garamond text-4xl text-center">What Our Client Say</h2>
+            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum
+                available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+
+            <!-- carousel  -->
+            <div>
+                <div class="carousel w-full">
+                    <div id="slide1" class="carousel-item relative w-full">
+                        <div class="caro w-full py-24">
+                            <div class="avatar ml-40">
+                                <div class="ring-primary ring-offset-base-100 w-24 rounded-full ring-2 ring-offset-2">
+                                    <img src="https://img.daisyui.com/images/profile/demo/spiderperson@192.webp" />
+                                </div>
+                            </div>
+                            <h2 class="font-eb-garamond text-2xl text-white text-center mt-6">Awlad Hossain</h2>
+                            <p class="mt-1 mb-8 text-gray-500 text-center">UIX Designer</p>
+                            <p class="max-w-4xl mx-auto text-gray-500 text-center">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                        </div>
+                        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                            <a href="#slide4" class="btn btn-circle">❮</a>
+                            <a href="#slide2" class="btn btn-circle">❯</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
