--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
                             </div>
                             <h2 class="font-eb-garamond text-2xl text-white text-center mt-6">Awlad Hossain</h2>
                             <p class="mt-1 mb-8 text-gray-500 text-center">UIX Designer</p>
-                            <p class="max-w-4xl mx-auto text-gray-500 text-center">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                            <p class="max-w-4xl mx-auto text-gray-500 text-center">Contrary to popular belief, Lorem
+                                Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+                                from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
+                                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                                consectetur.</p>
                         </div>
                         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
                             <a href="#slide4" class="btn btn-circle">❮</a>
@@ -180,6 +184,101 @@
                 </div>
             </div>
         </section>
+
+        <!-- faq section -->
+        <section class="my-24">
+            <h2 class="font-eb-garamond text-4xl text-center">Frequently Asked Any Questions</h2>
+            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum
+                available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+
+            <div>
+                <!-- hero -->
+                <div class="hero  min-h-screen">
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                        <img src="./images/faq.png" class="" />
+                        <div>
+                            <div class="collapse collapse-plus bg-base-100 border border-base-300 p-8 mb-7">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title font-semibold">1. Are application fee waivers available?
+                                </div>
+                                <div class="collapse-content text-sm">There are many variations of passages of Lorem
+                                    Ipsum available, but the majority have suffered alteration in some form, by injected
+                                    humour, . </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-100 border border-base-300 p-8 mb-7">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title font-semibold">1. Are application fee waivers available?
+                                </div>
+                                <div class="collapse-content text-sm">There are many variations of passages of Lorem
+                                    Ipsum available, but the majority have suffered alteration in some form, by injected
+                                    humour, . </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-100 border border-base-300 p-8 mb-7">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title font-semibold">1. Are application fee waivers available?
+                                </div>
+                                <div class="collapse-content text-sm">There are many variations of passages of Lorem
+                                    Ipsum available, but the majority have suffered alteration in some form, by injected
+                                    humour, . </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-100 border border-base-300 p-8 mb-7">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title font-semibold">1. Are application fee waivers available?
+                                </div>
+                                <div class="collapse-content text-sm">There are many variations of passages of Lorem
+                                    Ipsum available, but the majority have suffered alteration in some form, by injected
+                                    humour, . </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact section -->
+        <section class="my-24">
+            <h2 class="font-eb-garamond text-4xl text-center">Contact With Us</h2>
+            <p class="text-gray-500 text-center mt-6 mb-16">There are many variations of passages of Lorem Ipsum
+                available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+
+            <!--contact -->
+            <div class="lg:flex gap-8 max-w-6xl mx-auto">
+
+                <div class="grid grid-cols-2 lg:w-3/6">
+                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
+                        <img src="./images/location.png" alt="">
+                        <h2 class="text-2xl font-extrabold py-4">Address</h2>
+                        <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300">
+                        <img src="./images/location.png" alt="">
+                        <h2 class="text-2xl font-extrabold py-4">Address</h2>
+                        <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-r-1 border-r-gray-300">
+                        <img src="./images/location.png" alt="">
+                        <h2 class="text-2xl font-extrabold py-4">Address</h2>
+                        <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
+                    </div>
+                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3]">
+                        <img src="./images/location.png" alt="">
+                        <h2 class="text-2xl font-extrabold py-4">Address</h2>
+                        <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
+                    </div>
+                </div>
+                <!-- input -->
+                <div class="lg:w-3/6 mt-5 ml-5">
+                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Name" type="text">
+                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Email" type="text">
+                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Subject" type="text">
+                    <input class="w-5/6 h-44 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Message" type="text">
+                    <button class="btn gold text-white w-5/6 py-7">Send Message</button>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer></footer>
