--- a/index.html
+++ b/index.html
@@ -246,17 +246,20 @@
             <div class="lg:flex gap-8 max-w-6xl mx-auto">
 
                 <div class="grid grid-cols-2 lg:w-3/6">
-                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
+                    <div
+                        class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300 border-r-1 border-r-gray-300">
                         <img src="./images/location.png" alt="">
                         <h2 class="text-2xl font-extrabold py-4">Address</h2>
                         <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
                     </div>
-                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300">
+                    <div
+                        class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-b-1 border-b-gray-300">
                         <img src="./images/location.png" alt="">
                         <h2 class="text-2xl font-extrabold py-4">Address</h2>
                         <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
                     </div>
-                    <div class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-r-1 border-r-gray-300">
+                    <div
+                        class="flex flex-col justify-center items-center p-16 bg-[#F3F3F3] border-r-1 border-r-gray-300">
                         <img src="./images/location.png" alt="">
                         <h2 class="text-2xl font-extrabold py-4">Address</h2>
                         <p class="text-gray-500 text-center">A108 Adam Street, <br> New York, NY 535022</p>
@@ -269,10 +272,13 @@
                 </div>
                 <!-- input -->
                 <div class="lg:w-3/6 mt-5 ml-5">
-                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Name" type="text">
-                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Email" type="text">
+                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Name"
+                        type="text">
+                    <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Email"
+                        type="text">
                     <input class="w-5/6 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Subject" type="text">
-                    <input class="w-5/6 h-44 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Message" type="text">
+                    <input class="w-5/6 h-44 p-5 rounded-md bg-[#F3F3F3] border-none mb-8" placeholder="Your Message"
+                        type="text">
                     <button class="btn gold text-white w-5/6 py-7">Send Message</button>
                 </div>
             </div>
@@ -281,7 +287,39 @@
 
     </main>
 
-    <footer></footer>
+    <footer class="bg-black">
+        <footer class="footer sm:footer-horizontal max-w-6xl mx-auto text-gray-400 text-base-content p-10">
+            <nav>
+                <a class="link link-hover footer-title"><img src="./images/logo.png" alt=""></a>
+                <p class="max-w-64">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour.</p>
+            </nav>
+            <nav>
+                <h6 class="footer-title text-white">Usefull Link</h6>
+                <a class="link link-hover">Home</a>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Cases</a>
+                <a class="link link-hover">Blog</a>
+                <a class="link link-hover">Contact Us</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title text-white">Contact Now</h6>
+                <a class="link link-hover">555 4th 5t NW, Washington <br> DC 20530, United States</a>
+                <a class="link link-hover">+88 01750 000 000 <br>+88 01750 000 000</a>
+                <a class="link link-hover">info@gmail.com <br>info@gmail.com</a>
+            </nav>
+            <form>
+                <h6 class="footer-title text-white">Subscribe</h6>
+                <fieldset class="w-80">
+                    <label class="">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</label>
+                    <div class="join mt-5">
+                        <input type="text" placeholder="Email Address" class="input input-bordered join-item text-gray-500" />
+                        <button class="btn gold border-none join-item "><i class="fa-solid fa-square-up-right"></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </footer>
+    </footer>
 </body>
 
 </html>
